discussion/kv_engine/184032/184032_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54776: Merge branch 'cheshire-cat' into neo

Merge fix for MB-54776 from cheshire-cat into neo (initially fixed in
mad-hatter).

* commit '4b020c3d4':
  MB-54776: Don't return $XTOC=null

Change-Id: Iff1fe6c7c897df209a379360978929b2ed8a6cdb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-12-13 15:20:53.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-12-13 15:21:06.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/329190/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-13 15:39:16.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/693/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_xattr.cc:2223:5: error: no matching member function for call to "setBodyAndXattr" [clang-diagnostic-error]
    setBodyAndXattr(conn, value, {{sysXattr, xattrVal}});
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_client_test.h:127:10: note: candidate function not viable: no known conversion from "MemcachedConnection" to "const std::string" (aka "const basic_string<char>") for 1st argument
    void setBodyAndXattr(
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_client_test.h:140:10: note: candidate function not viable: requires 2 arguments, but 3 were provided
    void setBodyAndXattr(
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/693/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/693/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/866/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/tests/testapp/testapp_xattr.cc(2223): error C2664: "void TestappXattrClientTest::setBodyAndXattr(const std::string &,std::initializer_list<std::pair<const _Kty,_Ty>>)": cannot convert argument 1 from "MemcachedConnection" to "const std::string &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/866/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/693/ : FAILURE

Compile error at [2022-12-13T15:27:57.434Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/tests/testapp/testapp_xattr.cc:2223:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/693/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/966/ : FAILURE

Compile error at [2022-12-13T15:31:17.507Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/966/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/714/ : FAILURE

Compile error at [2022-12-13T15:32:27.491Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/tests/testapp/testapp_xattr.cc:2223:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/714/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/703/ : FAILURE

Compile error at [2022-12-13T15:34:05.548Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/703/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/702/ : FAILURE

Compile error at [2022-12-13T15:31:29.747Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/tests/testapp/testapp_xattr.cc:2223:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/702/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/684/ : FAILURE

Compile error at [2022-12-13T15:38:21.785Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/684/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/711/ : FAILURE

Compile error at [2022-12-13T15:34:52.055Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/711/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21753/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/666/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
